--- a/cluster/infra.yaml
+++ b/cluster/infra.yaml
@@ -7,7 +7,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 10m
-  path: ./infrastructure/test     # change to ./prod or ./stage accordingly
+  path: ./infrastructure/stage
   prune: true
   sourceRef:
     kind: GitRepository
