Fix Pulumi operator configuration for successful deployment
- Fixed base kustomization.yaml to include pulumi-operator.yaml
- Added missing Stack and Workspace CRDs to base configuration
- Updated ClusterRole permissions for all CRD resources
- Converted stage patch from HelmRelease to Deployment targeting
- Fixed kustomization patch targets to reference Deployment
- Verified all environments (test, stage, prod) pass dry-run validation
- Configuration now ready for successful Pulumi operator deployment

--- a/infrastructure/stage/kustomization.yaml
+++ b/infrastructure/stage/kustomization.yaml
@@ -4,5 +4,5 @@ resources:
 patches:
   - path: patch.yaml
     target:
-      kind: HelmRelease
+      kind: Deployment
       name: pulumi-operator
