--- a/infrastructure/base/pulumi-operator.yaml
+++ b/infrastructure/base/pulumi-operator.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: v1
 kind: Namespace
 metadata:
@@ -45,6 +46,46 @@ spec:
       openAPIV3Schema:
         type: object
 ---
+apiVersion: apiextensions.k8s.io/v1
+kind: CustomResourceDefinition
+metadata:
+  name: stacks.pulumi.com
+spec:
+  group: pulumi.com
+  names:
+    kind: Stack
+    listKind: StackList
+    plural: stacks
+    singular: stack
+  scope: Namespaced
+  versions:
+  - name: v1
+    served: true
+    storage: true
+    schema:
+      openAPIV3Schema:
+        type: object
+---
+apiVersion: apiextensions.k8s.io/v1
+kind: CustomResourceDefinition
+metadata:
+  name: workspaces.auto.pulumi.com
+spec:
+  group: auto.pulumi.com
+  names:
+    kind: Workspace
+    listKind: WorkspaceList
+    plural: workspaces
+    singular: workspace
+  scope: Namespaced
+  versions:
+  - name: v1alpha1
+    served: true
+    storage: true
+    schema:
+      openAPIV3Schema:
+        type: object
+---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -82,9 +123,22 @@ rules:
   - patch
   - delete
 - apiGroups:
+  - pulumi.com
+  resources:
+  - stacks
+  verbs:
+  - get
+  - list
+  - watch
+  - create
+  - update
+  - patch
+  - delete
+- apiGroups:
   - auto.pulumi.com
   resources:
   - updates
+  - workspaces
   verbs:
   - get
   - list
