--- a/infrastructure/test/patch.yaml
+++ b/infrastructure/test/patch.yaml
@@ -1,21 +1,22 @@
 ---
-apiVersion: helm.toolkit.fluxcd.io/v2
-kind: HelmRelease
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: pulumi-operator
   namespace: pulumi
 spec:
-  values:
-    operator:
-      logLevel: debug
-      # Lower resource requirements for test environment
-      resources:
-        limits:
-          cpu: 200m
-          memory: 256Mi
-        requests:
-          cpu: 50m
-          memory: 64Mi
-    # Enable monitoring in test for validation
-    serviceMonitor:
-      enabled: true
+  template:
+    spec:
+      containers:
+        - name: manager
+          # Lower resource requirements for test environment
+          resources:
+            limits:
+              cpu: 200m
+              memory: 256Mi
+            requests:
+              cpu: 50m
+              memory: 64Mi
+          env:
+            - name: PULUMI_LOG_LEVEL
+              value: "debug"  # Verbose logging for test environment
