Add comprehensive RBAC permissions for Pulumi operator
- Add permissions for pods, services, events, persistentvolumeclaims
- Add permissions for apps (deployments, statefulsets, daemonsets, replicasets)
- Add permissions for batch (jobs, cronjobs)
- Add permissions for RBAC management
- Add permissions for apiextensions, admissionregistration
- Add permissions for networking, policy, autoscaling, cert-manager
- Fix statefulsets and events permission issues

--- a/infrastructure/base/pulumi-operator.yaml
+++ b/infrastructure/base/pulumi-operator.yaml
@@ -97,68 +97,89 @@ kind: ClusterRole
 metadata:
   name: pulumi-operator-manager
 rules:
-- apiGroups:
-  - ""
-  resources:
-  - secrets
-  - configmaps
-  verbs:
-  - get
-  - list
-  - watch
-  - create
-  - update
-  - patch
-  - delete
-- apiGroups:
-  - pulumi.com
-  resources:
-  - programs
-  verbs:
-  - get
-  - list
-  - watch
-  - create
-  - update
-  - patch
-  - delete
-- apiGroups:
-  - pulumi.com
-  resources:
-  - stacks
-  verbs:
-  - get
-  - list
-  - watch
-  - create
-  - update
-  - patch
-  - delete
-- apiGroups:
-  - auto.pulumi.com
-  resources:
-  - updates
-  - workspaces
-  verbs:
-  - get
-  - list
-  - watch
-  - create
-  - update
-  - patch
-  - delete
-- apiGroups:
-  - coordination.k8s.io
-  resources:
-  - leases
-  verbs:
-  - get
-  - list
-  - watch
-  - create
-  - update
-  - patch
-  - delete
+  - apiGroups: [""]
+    resources:
+      - pods
+      - services
+      - secrets
+      - configmaps
+      - persistentvolumeclaims
+      - events
+    verbs: ["*"]
+
+  - apiGroups: ["apps"]
+    resources:
+      - deployments
+      - statefulsets
+      - daemonsets
+      - replicasets
+    verbs: ["*"]
+
+  - apiGroups: ["batch"]
+    resources:
+      - jobs
+      - cronjobs
+    verbs: ["*"]
+
+  - apiGroups: ["pulumi.com"]
+    resources:
+      - stacks
+      - programs
+    verbs: ["*"]
+  
+  - apiGroups: ["auto.pulumi.com"]
+    resources:
+      - updates
+      - workspaces
+    verbs: ["*"]
+
+  - apiGroups: ["rbac.authorization.k8s.io"]
+    resources:
+      - roles
+      - rolebindings
+      - clusterroles
+      - clusterrolebindings
+    verbs: ["*"]
+
+  - apiGroups: ["apiextensions.k8s.io"]
+    resources:
+      - customresourcedefinitions
+    verbs: ["*"]
+
+  - apiGroups: ["admissionregistration.k8s.io"]
+    resources:
+      - mutatingwebhookconfigurations
+      - validatingwebhookconfigurations
+    verbs: ["*"]
+
+  - apiGroups: ["networking.k8s.io"]
+    resources:
+      - ingresses
+      - networkpolicies
+    verbs: ["*"]
+
+  - apiGroups: ["policy"]
+    resources:
+      - poddisruptionbudgets
+    verbs: ["*"]
+
+  - apiGroups: ["autoscaling"]
+    resources:
+      - horizontalpodautoscalers
+    verbs: ["*"]
+
+  - apiGroups: ["cert-manager.io"]
+    resources:
+      - certificates
+      - certificaterequests
+      - clusterissuers
+      - issuers
+    verbs: ["*"]
+
+  - apiGroups: ["coordination.k8s.io"]
+    resources:
+      - leases
+    verbs: ["*"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
