Fix RBAC: Add status and finalizers permissions for Pulumi CRDs
- Add status subresource permissions for stacks and programs
- Add status subresource permissions for updates and workspaces
- Add finalizers permissions for all Pulumi CRDs
- Fixes 'cannot update resource stacks/status' errors

--- a/infrastructure/base/pulumi-operator.yaml
+++ b/infrastructure/base/pulumi-operator.yaml
@@ -125,12 +125,20 @@ rules:
     resources:
       - stacks
       - programs
+      - stacks/status
+      - programs/status
+      - stacks/finalizers
+      - programs/finalizers
     verbs: ["*"]
   
   - apiGroups: ["auto.pulumi.com"]
     resources:
       - updates
       - workspaces
+      - updates/status
+      - workspaces/status
+      - updates/finalizers
+      - workspaces/finalizers
     verbs: ["*"]
 
   - apiGroups: ["rbac.authorization.k8s.io"]
