Update Pulumi operator to use stable pulumi:3.187.0-nonroot image
- Changed container image from pulumi/pulumi-kubernetes-operator:v2.1.0 to pulumi/pulumi:3.187.0-nonroot
- Removed PULUMI_IMAGE environment variable since we're setting image directly
- This should resolve workspace initialization issues due to image compatibility

--- a/infrastructure/base/pulumi-operator.yaml
+++ b/infrastructure/base/pulumi-operator.yaml
@@ -28918,7 +28918,7 @@ spec:
       serviceAccountName: pulumi-operator
       containers:
       - name: manager
-        image: pulumi/pulumi-kubernetes-operator:v2.1.0
+        image: pulumi/pulumi:3.187.0-nonroot
         args:
         - "/manager"
         - "--leader-elect"
