Fix Pulumi operator image configuration
- Revert container image to pulumi/pulumi-kubernetes-operator:v2.1.0
- Set PULUMI_IMAGE env var to pulumi/pulumi:3.187.0-nonroot for workspace containers
- Properly separate operator image from CLI image used in workspaces

--- a/infrastructure/base/pulumi-operator.yaml
+++ b/infrastructure/base/pulumi-operator.yaml
@@ -28918,7 +28918,7 @@ spec:
       serviceAccountName: pulumi-operator
       containers:
       - name: manager
-        image: pulumi/pulumi:3.187.0-nonroot
+        image: pulumi/pulumi-kubernetes-operator:v2.1.0
         args:
         - "/manager"
         - "--leader-elect"
@@ -28928,6 +28928,8 @@ spec:
             secretKeyRef:
               name: pulumi-access-token
               key: PULUMI_ACCESS_TOKEN
+        - name: PULUMI_IMAGE
+          value: "pulumi/pulumi:3.187.0-nonroot"
         resources:
           limits:
             cpu: 500m
